--- a/Amazon-Project/index.html
+++ b/Amazon-Project/index.html
@@ -1,9 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Amazon Project</title>
+    <title>Amazon.com</title>
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://www.amazon.com/favicon.ico"
+    />
   </head>
   <body>
     <div id="root"></div>
